<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputField"
        android:hint="this is a hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/changeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:textAllCaps="false"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/switchActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="Jump Activity"
        android:onClick="onClick"/>
</LinearLayout>